--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --font-pret: "Pretendard", sans-serif;
+  --font-pretendard: "Pretendard", sans-serif;
   --font-montserrat: "Montserrat", sans-serif;
 }
 
@@ -26,6 +26,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .heroSwiper .swiper-pagination {
   position: relative !important;
   display: flex;
